# atom-ghc-mod-testcases

./: README.md
stack-multi-package/: stack.yaml
stack-multi-package/my-package-a/: my-package-a.cabal
stack-multi-package/my-package-a/src/: LibA1.hs  LibA2.hs
stack-multi-package/my-package-b/: my-package-b.cabal
stack-multi-package/my-package-b/app/: Main.hs
stack-multi-package/my-package-b/src/: LibB1.hs  LibB2.hs  LibB3.hs  LibB4.hs
