name:                my-package-a
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
author:              Karl Ostmo
maintainer:          example@example.com
copyright:           2016 Karl Ostmo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibA1, LibA2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
