name:                my-package-b
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
author:              Karl Ostmo
maintainer:          example@example.com
copyright:           2016 Karl Ostmo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibB1, LibB2, LibB3
  build-depends:       base >= 4.7 && < 5
                     , my-package-a
  default-language:    Haskell2010

executable demonstrate-goto-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-package-b
  default-language:    Haskell2010
